--- a/template/experience.html
+++ b/template/experience.html
@@ -1,17 +1,14 @@
 <div class="jumbotron">
 				<h2>Work Experience</h2>
-				<h3>I have 3.4 yr of experience in Infosys</h3></br>
-			<p>I have worked on web based application which is responsible to make real time payment for the customer. It is an enhance application which cover millions of customers living in Florida or outside. This application updates the mainframe DB2 at real-time and generate the receipt according to the customer account type and other validation. This application gives control to the internal user to make changes in Pay agents. This application also provides the location of the all the pay agents with in the customer area by using google API. This application also has features to add new users, add new agents and a lot more. Font end is designed in .net platform. We are using web service to communicate with mainframe as it makes it as platform independent.<br> Front end can be in any technology and the intermediate is FUSION which communicate with MF and front end application. The Mainframe part is design in such a way that it can get request form any validated front end application, MF will identify it by using some key in the input field.<br> At the end of the day the payment made in a day will get realize to all DB2 tables and will get reflect everywhere (CICS applications).</p>
-			<h3>Responsibilities</h3>
+				<h3>I have 4 yr of Development experience</h3></br>
+				<p>Working as full stack developer</p>
+				<h3>Responsibilities</h3>
 			<ul>
-				<li>Team Member (Developer)<li>Worked on creation of Functional Design.</li>
-				<li>Analyzing the requirements.</li><li>DB2 table design.</li>
-				<li>Develop programs.</li><li>Create UAT and test them</li>
+				<li>Designing</li>
+				<li>Coding</li>
+				<li>Testing</li>
 				<li>Bug Fixes</li>
-				<li>Handling Client Calls</li><li>Support System testing</li>
-				<li>Monitor Omegmon for storage violation in production during first run</li>
-				<li>Production Support and provide solution instantly</li><li>Follow Agile methodology</li>
-				<li>Created 8 program from scratch; 1 web service based online and 7 batch program</li>
-				<li>CICS screen change enhancement</li>
+				<li>Deployment</li>
+				
 			</ul>
 </div>
